parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    LICONST
    LONG
    INCRE
    BASE
    FOREACH
    THIS
    FCONST
    ULONG
    MCONST
    VSCONST
    DECRE
    SCONST
    UICONST
    CCONST
    IN
    FLOAT
    ULICONST

Grammar

Rule 0     S' -> compilation-unit
Rule 1     compilation-unit -> class-declarations-opt
Rule 2     compilation-unit -> statement-list
Rule 3     semi-opt -> DELIM
Rule 4     semi-opt -> empty
Rule 5     class-declarations-opt -> class-declarations
Rule 6     class-declarations-opt -> empty
Rule 7     class-declarations -> class-declaration
Rule 8     class-declarations -> class-declarations class-declaration
Rule 9     class-declaration -> class-header class-body semi-opt
Rule 10    class-header -> CLASS IDENTIFIER COLON class-type
Rule 11    class-header -> CLASS IDENTIFIER
Rule 12    class-type -> IDENTIFIER
Rule 13    class-body -> BLOCK_BEGIN class-member-declarations-opt BLOCK_END
Rule 14    class-member-declarations-opt -> class-member-declarations
Rule 15    class-member-declarations-opt -> empty
Rule 16    class-member-declarations -> class-member-declaration
Rule 17    class-member-declarations -> class-member-declarations class-member-declaration
Rule 18    class-member-declaration -> constant-declaration
Rule 19    class-member-declaration -> field-declaration
Rule 20    class-member-declaration -> method-declaration
Rule 21    class-member-declaration -> constructor-declaration
Rule 22    constant-declaration -> CONST simple-type constant-declarators DELIM
Rule 23    constant-declaration -> modifier CONST simple-type constant-declarators DELIM
Rule 24    type -> simple-type
Rule 25    type -> class-type
Rule 26    type -> array-type
Rule 27    simple-type -> BOOL
Rule 28    simple-type -> INT
Rule 29    simple-type -> UINT
Rule 30    simple-type -> CHAR
Rule 31    simple-type -> DOUBLE
Rule 32    array-type -> simple-type OPEN_BRACKET ICONST CLOSE_BRACKET
Rule 33    constant-declarators -> constant-declarator
Rule 34    constant-declarators -> constant-declarators COMMA constant-declarator
Rule 35    constant-declarator -> IDENTIFIER ASSIGN expression
Rule 36    expression -> conditional-expression
Rule 37    expression -> assignment
Rule 38    conditional-expression -> conditional-or-expression
Rule 39    conditional-expression -> conditional-or-expression CONDOP expression COLON expression
Rule 40    conditional-or-expression -> conditional-and-expression
Rule 41    conditional-or-expression -> conditional-or-expression M_or LOGOR conditional-and-expression
Rule 42    M_or -> empty
Rule 43    M_and -> empty
Rule 44    conditional-and-expression -> inclusive-or-expression
Rule 45    conditional-and-expression -> conditional-and-expression M_and LOGAND inclusive-or-expression
Rule 46    inclusive-or-expression -> exclusive-or-expression
Rule 47    inclusive-or-expression -> inclusive-or-expression BITOR exclusive-or-expression
Rule 48    exclusive-or-expression -> and-expression
Rule 49    exclusive-or-expression -> exclusive-or-expression BITXOR and-expression
Rule 50    and-expression -> equality-expression
Rule 51    and-expression -> and-expression BITAND equality-expression
Rule 52    equality-expression -> relational-expression
Rule 53    equality-expression -> equality-expression EQ relational-expression
Rule 54    equality-expression -> equality-expression NE relational-expression
Rule 55    relational-expression -> shift-expression
Rule 56    relational-expression -> relational-expression LT shift-expression
Rule 57    relational-expression -> relational-expression GT shift-expression
Rule 58    relational-expression -> relational-expression LE shift-expression
Rule 59    relational-expression -> relational-expression GE shift-expression
Rule 60    shift-expression -> additive-expression
Rule 61    shift-expression -> shift-expression LSHIFT additive-expression
Rule 62    shift-expression -> shift-expression RSHIFT additive-expression
Rule 63    additive-expression -> multiplicative-expression
Rule 64    additive-expression -> additive-expression PLUS multiplicative-expression
Rule 65    additive-expression -> additive-expression MINUS multiplicative-expression
Rule 66    multiplicative-expression -> unary-expression
Rule 67    multiplicative-expression -> multiplicative-expression TIMES unary-expression
Rule 68    multiplicative-expression -> multiplicative-expression DIV unary-expression
Rule 69    multiplicative-expression -> multiplicative-expression MOD unary-expression
Rule 70    unary-expression -> primary-expression
Rule 71    unary-expression -> PLUS unary-expression
Rule 72    unary-expression -> MINUS unary-expression
Rule 73    unary-expression -> BITNOT unary-expression
Rule 74    unary-expression -> BITCOMP unary-expression
Rule 75    primary-expression -> array-creation-expression
Rule 76    primary-expression -> primary-no-array-creation-expression
Rule 77    array-creation-expression -> NEW simple-type OPEN_BRACKET ICONST CLOSE_BRACKET array-initializer-opt
Rule 78    array-initializer-opt -> array-initializer
Rule 79    array-initializer-opt -> empty
Rule 80    expression-list -> expression
Rule 81    expression-list -> expression-list COMMA expression
Rule 82    array-initializer -> BLOCK_BEGIN variable-initializer-list-opt BLOCK_END
Rule 83    variable-initializer-list-opt -> expression-list
Rule 84    variable-initializer-list-opt -> empty
Rule 85    variable-initializer -> expression
Rule 86    variable-initializer -> array-initializer
Rule 87    primary-no-array-creation-expression -> literal
Rule 88    primary-no-array-creation-expression -> IDENTIFIER
Rule 89    primary-no-array-creation-expression -> element-access
Rule 90    primary-no-array-creation-expression -> parenthesized-expression
Rule 91    primary-no-array-creation-expression -> member-access
Rule 92    primary-no-array-creation-expression -> invocation-expression
Rule 93    primary-no-array-creation-expression -> object-creation-expression
Rule 94    object-creation-expression -> NEW class-type OPEN_PAREN argument-list-opt CLOSE_PAREN
Rule 95    parenthesized-expression -> OPEN_PAREN expression CLOSE_PAREN
Rule 96    member-access -> IDENTIFIER DOT IDENTIFIER
Rule 97    invocation-expression -> IDENTIFIER OPEN_PAREN argument-list-opt CLOSE_PAREN
Rule 98    invocation-expression -> IDENTIFIER DOT IDENTIFIER OPEN_PAREN argument-list-opt CLOSE_PAREN
Rule 99    argument-list-opt -> expression-list
Rule 100   argument-list-opt -> empty
Rule 101   element-access -> IDENTIFIER OPEN_BRACKET expression CLOSE_BRACKET
Rule 102   element-access -> member-access OPEN_BRACKET expression CLOSE_BRACKET
Rule 103   assignment -> IDENTIFIER assignment-operator expression
Rule 104   assignment -> member-access assignment-operator expression
Rule 105   assignment -> element-access assignment-operator expression
Rule 106   assignment-operator -> ASSIGN
Rule 107   assignment-operator -> PLUSEQUAL
Rule 108   assignment-operator -> MINUSEQUAL
Rule 109   assignment-operator -> TIMESEQUAL
Rule 110   assignment-operator -> DIVEQUAL
Rule 111   assignment-operator -> MODEQUAL
Rule 112   assignment-operator -> BITANDEQUAL
Rule 113   assignment-operator -> BITOREQUAL
Rule 114   assignment-operator -> BITXOREQUAL
Rule 115   assignment-operator -> LSHIFTEQUAL
Rule 116   assignment-operator -> RSHIFTEQUAL
Rule 117   field-declaration -> modifier type variable-declarators DELIM
Rule 118   field-declaration -> type variable-declarators DELIM
Rule 119   modifier -> PUBLIC
Rule 120   modifier -> PRIVATE
Rule 121   variable-declarators -> variable-declarator
Rule 122   variable-declarators -> variable-declarators COMMA variable-declarator
Rule 123   variable-declarator -> IDENTIFIER
Rule 124   variable-declarator -> IDENTIFIER ASSIGN variable-initializer
Rule 125   method-declaration -> method-header method-body
Rule 126   method-header -> type IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN
Rule 127   method-header -> VOID IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN
Rule 128   formal-parameter-list-opt -> formal-parameter-list
Rule 129   formal-parameter-list-opt -> empty
Rule 130   formal-parameter-list -> fixed-parameters
Rule 131   fixed-parameters -> fixed-parameter
Rule 132   fixed-parameters -> fixed-parameters COMMA fixed-parameter
Rule 133   fixed-parameter -> type IDENTIFIER
Rule 134   method-body -> method-block
Rule 135   method-block -> BLOCK_BEGIN statement-list-opt BLOCK_END
Rule 136   block -> BLOCK_BEGIN M_bstart statement-list-opt BLOCK_END
Rule 137   M_bstart -> empty
Rule 138   statement-list-opt -> statement-list
Rule 139   statement-list-opt -> empty
Rule 140   statement-list -> statement
Rule 141   statement-list -> statement-list statement
Rule 142   statement -> labeled-statement
Rule 143   statement -> declaration-statement
Rule 144   statement -> block
Rule 145   statement -> empty-statement
Rule 146   statement -> expression-statement
Rule 147   statement -> selection-statement
Rule 148   statement -> iteration-statement
Rule 149   statement -> jump-statement
Rule 150   statement -> write-statement
Rule 151   statement -> read-statement
Rule 152   statement -> method-declaration
Rule 153   write-statement -> CONSOLE DOT WRITELINE OPEN_PAREN print-list CLOSE_PAREN DELIM
Rule 154   print-list -> expression
Rule 155   print-list -> expression COMMA print-list
Rule 156   read-statement -> CONSOLE DOT READLINE OPEN_PAREN IDENTIFIER CLOSE_PAREN DELIM
Rule 157   labeled-statement -> IDENTIFIER COLON statement
Rule 158   declaration-statement -> local-variable-declaration DELIM
Rule 159   declaration-statement -> local-constant-declaration DELIM
Rule 160   local-variable-declaration -> type variable-declarators
Rule 161   local-constant-declaration -> CONST simple-type constant-declarators
Rule 162   empty-statement -> DELIM
Rule 163   expression-statement -> statement-expression DELIM
Rule 164   statement-expression -> invocation-expression
Rule 165   statement-expression -> assignment
Rule 166   selection-statement -> if-statement
Rule 167   selection-statement -> switch-statement
Rule 168   if-statement -> IF OPEN_PAREN expression CLOSE_PAREN M_if block
Rule 169   if-statement -> IF OPEN_PAREN expression CLOSE_PAREN M_if block ELSE M_else block
Rule 170   if-statement -> IF OPEN_PAREN expression CLOSE_PAREN M_if block ELSE M_else if-statement M_quad
Rule 171   M_if -> empty
Rule 172   M_else -> empty
Rule 173   M_quad -> empty
Rule 174   switch-statement -> SWITCH OPEN_PAREN expression M_switch CLOSE_PAREN M_quad switch-block
Rule 175   M_switch -> empty
Rule 176   switch-block -> BLOCK_BEGIN M_bstart switch-sections BLOCK_END
Rule 177   switch-sections -> switch-section
Rule 178   switch-sections -> switch-sections switch-section
Rule 179   switch-section -> switch-label M_quad statement-list
Rule 180   switch-label -> CASE literal COLON
Rule 181   switch-label -> DEFAULT COLON
Rule 182   iteration-statement -> while-statement M_quad
Rule 183   iteration-statement -> for-statement M_quad
Rule 184   iteration-statement -> do-statement M_quad
Rule 185   while-statement -> WHILE M_quad OPEN_PAREN expression CLOSE_PAREN M_while block
Rule 186   M_while -> empty
Rule 187   do-statement -> DO M_quad block WHILE OPEN_PAREN M_quad expression CLOSE_PAREN DELIM
Rule 188   for-statement -> FOR OPEN_PAREN for-initializer-opt DELIM M_quad for-condition DELIM M_quad for-iterator-opt CLOSE_PAREN M_quad block
Rule 189   for-initializer-opt -> for-initializer
Rule 190   for-initializer-opt -> empty
Rule 191   for-initializer -> statement-expression-list
Rule 192   for-condition -> expression
Rule 193   for-iterator-opt -> for-iterator
Rule 194   for-iterator-opt -> empty
Rule 195   for-iterator -> statement-expression-list
Rule 196   statement-expression-list -> statement-expression
Rule 197   statement-expression-list -> statement-expression-list COMMA statement-expression
Rule 198   jump-statement -> break-statement
Rule 199   jump-statement -> continue-statement
Rule 200   jump-statement -> goto-statement
Rule 201   jump-statement -> return-statement
Rule 202   break-statement -> BREAK DELIM
Rule 203   continue-statement -> CONTINUE DELIM
Rule 204   goto-statement -> GOTO IDENTIFIER DELIM
Rule 205   return-statement -> RETURN expression-opt DELIM
Rule 206   expression-opt -> expression
Rule 207   expression-opt -> empty
Rule 208   constructor-declaration -> constructor-declarator constructor-body
Rule 209   constructor-declarator -> IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN
Rule 210   constructor-body -> block
Rule 211   constructor-body -> DELIM
Rule 212   literal -> ICONST
Rule 213   literal -> DCONST
Rule 214   literal -> TRUE
Rule 215   literal -> FALSE
Rule 216   empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 35 106 124
BASE                 : 
BITAND               : 51
BITANDEQUAL          : 112
BITCOMP              : 74
BITNOT               : 73
BITOR                : 47
BITOREQUAL           : 113
BITXOR               : 49
BITXOREQUAL          : 114
BLOCK_BEGIN          : 13 82 135 136 176
BLOCK_END            : 13 82 135 136 176
BOOL                 : 27
BREAK                : 202
CASE                 : 180
CCONST               : 
CHAR                 : 30
CLASS                : 10 11
CLOSE_BRACKET        : 32 77 101 102
CLOSE_PAREN          : 94 95 97 98 126 127 153 156 168 169 170 174 185 187 188 209
COLON                : 10 39 157 180 181
COMMA                : 34 81 122 132 155 197
CONDOP               : 39
CONSOLE              : 153 156
CONST                : 22 23 161
CONTINUE             : 203
DCONST               : 213
DECRE                : 
DEFAULT              : 181
DELIM                : 3 22 23 117 118 153 156 158 159 162 163 187 188 188 202 203 204 205 211
DIV                  : 68
DIVEQUAL             : 110
DO                   : 187
DOT                  : 96 98 153 156
DOUBLE               : 31
ELSE                 : 169 170
EQ                   : 53
FALSE                : 215
FCONST               : 
FLOAT                : 
FOR                  : 188
FOREACH              : 
GE                   : 59
GOTO                 : 204
GT                   : 57
ICONST               : 32 77 212
IDENTIFIER           : 10 11 12 35 88 96 96 97 98 98 101 103 123 124 126 127 133 156 157 204 209
IF                   : 168 169 170
IN                   : 
INCRE                : 
INT                  : 28
LE                   : 58
LICONST              : 
LOGAND               : 45
LOGOR                : 41
LONG                 : 
LSHIFT               : 61
LSHIFTEQUAL          : 115
LT                   : 56
MCONST               : 
MINUS                : 65 72
MINUSEQUAL           : 108
MOD                  : 69
MODEQUAL             : 111
NE                   : 54
NEW                  : 77 94
OPEN_BRACKET         : 32 77 101 102
OPEN_PAREN           : 94 95 97 98 126 127 153 156 168 169 170 174 185 187 188 209
PLUS                 : 64 71
PLUSEQUAL            : 107
PRIVATE              : 120
PUBLIC               : 119
READLINE             : 156
RETURN               : 205
RSHIFT               : 62
RSHIFTEQUAL          : 116
SCONST               : 
SWITCH               : 174
THIS                 : 
TIMES                : 67
TIMESEQUAL           : 109
TRUE                 : 214
UICONST              : 
UINT                 : 29
ULICONST             : 
ULONG                : 
VOID                 : 127
VSCONST              : 
WHILE                : 185 187
WRITELINE            : 153
error                : 

Nonterminals, with rules where they appear

M_and                : 45
M_bstart             : 136 176
M_else               : 169 170
M_if                 : 168 169 170
M_or                 : 41
M_quad               : 170 174 179 182 183 184 185 187 187 188 188 188
M_switch             : 174
M_while              : 185
additive-expression  : 60 61 62 64 65
and-expression       : 48 49 51
argument-list-opt    : 94 97 98
array-creation-expression : 75
array-initializer    : 78 86
array-initializer-opt : 77
array-type           : 26
assignment           : 37 165
assignment-operator  : 103 104 105
block                : 144 168 169 169 170 185 187 188 210
break-statement      : 198
class-body           : 9
class-declaration    : 7 8
class-declarations   : 5 8
class-declarations-opt : 1
class-header         : 9
class-member-declaration : 16 17
class-member-declarations : 14 17
class-member-declarations-opt : 13
class-type           : 10 25 94
compilation-unit     : 0
conditional-and-expression : 40 41 45
conditional-expression : 36
conditional-or-expression : 38 39 41
constant-declaration : 18
constant-declarator  : 33 34
constant-declarators : 22 23 34 161
constructor-body     : 208
constructor-declaration : 21
constructor-declarator : 208
continue-statement   : 199
declaration-statement : 143
do-statement         : 184
element-access       : 89 105
empty                : 4 6 15 42 43 79 84 100 129 137 139 171 172 173 175 186 190 194 207
empty-statement      : 145
equality-expression  : 50 51 53 54
exclusive-or-expression : 46 47 49
expression           : 35 39 39 80 81 85 95 101 102 103 104 105 154 155 168 169 170 174 185 187 192 206
expression-list      : 81 83 99
expression-opt       : 205
expression-statement : 146
field-declaration    : 19
fixed-parameter      : 131 132
fixed-parameters     : 130 132
for-condition        : 188
for-initializer      : 189
for-initializer-opt  : 188
for-iterator         : 193
for-iterator-opt     : 188
for-statement        : 183
formal-parameter-list : 128
formal-parameter-list-opt : 126 127 209
goto-statement       : 200
if-statement         : 166 170
inclusive-or-expression : 44 45 47
invocation-expression : 92 164
iteration-statement  : 148
jump-statement       : 149
labeled-statement    : 142
literal              : 87 180
local-constant-declaration : 159
local-variable-declaration : 158
member-access        : 91 102 104
method-block         : 134
method-body          : 125
method-declaration   : 20 152
method-header        : 125
modifier             : 23 117
multiplicative-expression : 63 64 65 67 68 69
object-creation-expression : 93
parenthesized-expression : 90
primary-expression   : 70
primary-no-array-creation-expression : 76
print-list           : 153 155
read-statement       : 151
relational-expression : 52 53 54 56 57 58 59
return-statement     : 201
selection-statement  : 147
semi-opt             : 9
shift-expression     : 55 56 57 58 59 61 62
simple-type          : 22 23 24 32 77 161
statement            : 140 141 157
statement-expression : 163 196 197
statement-expression-list : 191 195 197
statement-list       : 2 138 141 179
statement-list-opt   : 135 136
switch-block         : 174
switch-label         : 179
switch-section       : 177 178
switch-sections      : 176 178
switch-statement     : 167
type                 : 117 118 126 133 160
unary-expression     : 66 67 68 69 71 72 73 74
variable-declarator  : 121 122
variable-declarators : 117 118 122 160
variable-initializer : 124
variable-initializer-list-opt : 82
while-statement      : 182
write-statement      : 150

Parsing method: LALR

state 0

    (0) S' -> . compilation-unit
    (1) compilation-unit -> . class-declarations-opt
    (2) compilation-unit -> . statement-list
    (5) class-declarations-opt -> . class-declarations
    (6) class-declarations-opt -> . empty
    (140) statement-list -> . statement
    (141) statement-list -> . statement-list statement
    (7) class-declarations -> . class-declaration
    (8) class-declarations -> . class-declarations class-declaration
    (216) empty -> .
    (142) statement -> . labeled-statement
    (143) statement -> . declaration-statement
    (144) statement -> . block
    (145) statement -> . empty-statement
    (146) statement -> . expression-statement
    (147) statement -> . selection-statement
    (148) statement -> . iteration-statement
    (149) statement -> . jump-statement
    (150) statement -> . write-statement
    (151) statement -> . read-statement
    (152) statement -> . method-declaration
    (9) class-declaration -> . class-header class-body semi-opt
    (157) labeled-statement -> . IDENTIFIER COLON statement
    (158) declaration-statement -> . local-variable-declaration DELIM
    (159) declaration-statement -> . local-constant-declaration DELIM
    (136) block -> . BLOCK_BEGIN M_bstart statement-list-opt BLOCK_END
    (162) empty-statement -> . DELIM
    (163) expression-statement -> . statement-expression DELIM
    (166) selection-statement -> . if-statement
    (167) selection-statement -> . switch-statement
    (182) iteration-statement -> . while-statement M_quad
    (183) iteration-statement -> . for-statement M_quad
    (184) iteration-statement -> . do-statement M_quad
    (198) jump-statement -> . break-statement
    (199) jump-statement -> . continue-statement
    (200) jump-statement -> . goto-statement
    (201) jump-statement -> . return-statement
    (153) write-statement -> . CONSOLE DOT WRITELINE OPEN_PAREN print-list CLOSE_PAREN DELIM
    (156) read-statement -> . CONSOLE DOT READLINE OPEN_PAREN IDENTIFIER CLOSE_PAREN DELIM
    (125) method-declaration -> . method-header method-body
    (10) class-header -> . CLASS IDENTIFIER COLON class-type
    (11) class-header -> . CLASS IDENTIFIER
    (160) local-variable-declaration -> . type variable-declarators
    (161) local-constant-declaration -> . CONST simple-type constant-declarators
    (164) statement-expression -> . invocation-expression
    (165) statement-expression -> . assignment
    (168) if-statement -> . IF OPEN_PAREN expression CLOSE_PAREN M_if block
    (169) if-statement -> . IF OPEN_PAREN expression CLOSE_PAREN M_if block ELSE M_else block
    (170) if-statement -> . IF OPEN_PAREN expression CLOSE_PAREN M_if block ELSE M_else if-statement M_quad
    (174) switch-statement -> . SWITCH OPEN_PAREN expression M_switch CLOSE_PAREN M_quad switch-block
    (185) while-statement -> . WHILE M_quad OPEN_PAREN expression CLOSE_PAREN M_while block
    (188) for-statement -> . FOR OPEN_PAREN for-initializer-opt DELIM M_quad for-condition DELIM M_quad for-iterator-opt CLOSE_PAREN M_quad block
    (187) do-statement -> . DO M_quad block WHILE OPEN_PAREN M_quad expression CLOSE_PAREN DELIM
    (202) break-statement -> . BREAK DELIM
    (203) continue-statement -> . CONTINUE DELIM
    (204) goto-statement -> . GOTO IDENTIFIER DELIM
    (205) return-statement -> . RETURN expression-opt DELIM
    (126) method-header -> . type IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN
    (127) method-header -> . VOID IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN
    (24) type -> . simple-type
    (25) type -> . class-type
    (26) type -> . array-type
    (97) invocation-expression -> . IDENTIFIER OPEN_PAREN argument-list-opt CLOSE_PAREN
    (98) invocation-expression -> . IDENTIFIER DOT IDENTIFIER OPEN_PAREN argument-list-opt CLOSE_PAREN
    (103) assignment -> . IDENTIFIER assignment-operator expression
    (104) assignment -> . member-access assignment-operator expression
    (105) assignment -> . element-access assignment-operator expression
    (27) simple-type -> . BOOL
    (28) simple-type -> . INT
    (29) simple-type -> . UINT
    (30) simple-type -> . CHAR
    (31) simple-type -> . DOUBLE
    (12) class-type -> . IDENTIFIER
    (32) array-type -> . simple-type OPEN_BRACKET ICONST CLOSE_BRACKET
    (96) member-access -> . IDENTIFIER DOT IDENTIFIER
    (101) element-access -> . IDENTIFIER OPEN_BRACKET expression CLOSE_BRACKET
    (102) element-access -> . member-access OPEN_BRACKET expression CLOSE_BRACKET

    $end            reduce using rule 216 (empty -> .)
    IDENTIFIER      shift and go to state 39
    BLOCK_BEGIN     shift and go to state 53
    DELIM           shift and go to state 4
    CONSOLE         shift and go to state 56
    CLASS           shift and go to state 54
    CONST           shift and go to state 52
    IF              shift and go to state 60
    SWITCH          shift and go to state 50
    WHILE           shift and go to state 34
    FOR             shift and go to state 24
    DO              shift and go to state 51
    BREAK           shift and go to state 45
    CONTINUE        shift and go to state 30
    GOTO            shift and go to state 8
    RETURN          shift and go to state 16
    VOID            shift and go to state 7
    BOOL            shift and go to state 46
    INT             shift and go to state 27
    UINT            shift and go to state 59
    CHAR            shift and go to state 33
    DOUBLE          shift and go to state 13

    return-statement               shift and go to state 19
    method-header                  shift and go to state 17
    write-statement                shift and go to state 1
    member-access                  shift and go to state 2
    selection-statement            shift and go to state 32
    simple-type                    shift and go to state 18
    compilation-unit               shift and go to state 49
    expression-statement           shift and go to state 3
    class-declarations-opt         shift and go to state 20
    break-statement                shift and go to state 36
    element-access                 shift and go to state 21
    method-declaration             shift and go to state 37
    local-constant-declaration     shift and go to state 22
    statement                      shift and go to state 38
    assignment                     shift and go to state 57
    for-statement                  shift and go to state 6
    type                           shift and go to state 40
    read-statement                 shift and go to state 55
    do-statement                   shift and go to state 23
    array-type                     shift and go to state 42
    continue-statement             shift and go to state 25
    invocation-expression          shift and go to state 14
    class-declaration              shift and go to state 58
    labeled-statement              shift and go to state 9
    declaration-statement          shift and go to state 43
    switch-statement               shift and go to state 10
    statement-expression           shift and go to state 5
    jump-statement                 shift and go to state 11
    iteration-statement            shift and go to state 44
    local-variable-declaration     shift and go to state 26
    class-declarations             shift and go to state 12
    goto-statement                 shift and go to state 28
    if-statement                   shift and go to state 29
    empty                          shift and go to state 41
    class-header                   shift and go to state 15
    statement-list                 shift and go to state 47
    class-type                     shift and go to state 61
    while-statement                shift and go to state 48
    empty-statement                shift and go to state 35
    block                          shift and go to state 31

state 1

    (150) statement -> write-statement .

    IDENTIFIER      reduce using rule 150 (statement -> write-statement .)
    BLOCK_BEGIN     reduce using rule 150 (statement -> write-statement .)
    DELIM           reduce using rule 150 (statement -> write-statement .)
    CONSOLE         reduce using rule 150 (statement -> write-statement .)
    CONST           reduce using rule 150 (statement -> write-statement .)
    IF              reduce using rule 150 (statement -> write-statement .)
    SWITCH          reduce using rule 150 (statement -> write-statement .)
    WHILE           reduce using rule 150 (statement -> write-statement .)
    FOR             reduce using rule 150 (statement -> write-statement .)
    DO              reduce using rule 150 (statement -> write-statement .)
    BREAK           reduce using rule 150 (statement -> write-statement .)
    CONTINUE        reduce using rule 150 (statement -> write-statement .)
    GOTO            reduce using rule 150 (statement -> write-statement .)
    RETURN          reduce using rule 150 (statement -> write-statement .)
    VOID            reduce using rule 150 (statement -> write-statement .)
    BOOL            reduce using rule 150 (statement -> write-statement .)
    INT             reduce using rule 150 (statement -> write-statement .)
    UINT            reduce using rule 150 (statement -> write-statement .)
    CHAR            reduce using rule 150 (statement -> write-statement .)
    DOUBLE          reduce using rule 150 (statement -> write-statement .)
    $end            reduce using rule 150 (statement -> write-statement .)
    BLOCK_END       reduce using rule 150 (statement -> write-statement .)
    CASE            reduce using rule 150 (statement -> write-statement .)
    DEFAULT         reduce using rule 150 (statement -> write-statement .)


state 2

    (104) assignment -> member-access . assignment-operator expression
    (102) element-access -> member-access . OPEN_BRACKET expression CLOSE_BRACKET
    (106) assignment-operator -> . ASSIGN
    (107) assignment-operator -> . PLUSEQUAL
    (108) assignment-operator -> . MINUSEQUAL
    (109) assignment-operator -> . TIMESEQUAL
    (110) assignment-operator -> . DIVEQUAL
    (111) assignment-operator -> . MODEQUAL
    (112) assignment-operator -> . BITANDEQUAL
    (113) assignment-operator -> . BITOREQUAL
    (114) assignment-operator -> . BITXOREQUAL
    (115) assignment-operator -> . LSHIFTEQUAL
    (116) assignment-operator -> . RSHIFTEQUAL

    OPEN_BRACKET    shift and go to state 67
    ASSIGN          shift and go to state 73
    PLUSEQUAL       shift and go to state 69
    MINUSEQUAL      shift and go to state 66
    TIMESEQUAL      shift and go to state 65
    DIVEQUAL        shift and go to state 62
    MODEQUAL        shift and go to state 74
    BITANDEQUAL     shift and go to state 71
    BITOREQUAL      shift and go to state 68
    BITXOREQUAL     shift and go to state 70
    LSHIFTEQUAL     shift and go to state 72
    RSHIFTEQUAL     shift and go to state 63

    assignment-operator            shift and go to state 64

state 3

    (146) statement -> expression-statement .

    IDENTIFIER      reduce using rule 146 (statement -> expression-statement .)
    BLOCK_BEGIN     reduce using rule 146 (statement -> expression-statement .)
    DELIM           reduce using rule 146 (statement -> expression-statement .)
    CONSOLE         reduce using rule 146 (statement -> expression-statement .)
    CONST           reduce using rule 146 (statement -> expression-statement .)
    IF              reduce using rule 146 (statement -> expression-statement .)
    SWITCH          reduce using rule 146 (statement -> expression-statement .)
    WHILE           reduce using rule 146 (statement -> expression-statement .)
    FOR             reduce using rule 146 (statement -> expression-statement .)
    DO              reduce using rule 146 (statement -> expression-statement .)
    BREAK           reduce using rule 146 (statement -> expression-statement .)
    CONTINUE        reduce using rule 146 (statement -> expression-statement .)
    GOTO            reduce using rule 146 (statement -> expression-statement .)
    RETURN          reduce using rule 146 (statement -> expression-statement .)
    VOID            reduce using rule 146 (statement -> expression-statement .)
    BOOL            reduce using rule 146 (statement -> expression-statement .)
    INT             reduce using rule 146 (statement -> expression-statement .)
    UINT            reduce using rule 146 (statement -> expression-statement .)
    CHAR            reduce using rule 146 (statement -> expression-statement .)
    DOUBLE          reduce using rule 146 (statement -> expression-statement .)
    $end            reduce using rule 146 (statement -> expression-statement .)
    BLOCK_END       reduce using rule 146 (statement -> expression-statement .)
    CASE            reduce using rule 146 (statement -> expression-statement .)
    DEFAULT         reduce using rule 146 (statement -> expression-statement .)


state 4

    (162) empty-statement -> DELIM .

    IDENTIFIER      reduce using rule 162 (empty-statement -> DELIM .)
    BLOCK_BEGIN     reduce using rule 162 (empty-statement -> DELIM .)
    DELIM           reduce using rule 162 (empty-statement -> DELIM .)
    CONSOLE         reduce using rule 162 (empty-statement -> DELIM .)
    CONST           reduce using rule 162 (empty-statement -> DELIM .)
    IF              reduce using rule 162 (empty-statement -> DELIM .)
    SWITCH          reduce using rule 162 (empty-statement -> DELIM .)
    WHILE           reduce using rule 162 (empty-statement -> DELIM .)
    FOR             reduce using rule 162 (empty-statement -> DELIM .)
    DO              reduce using rule 162 (empty-statement -> DELIM .)
    BREAK           reduce using rule 162 (empty-statement -> DELIM .)
    CONTINUE        reduce using rule 162 (empty-statement -> DELIM .)
    GOTO            reduce using rule 162 (empty-statement -> DELIM .)
    RETURN          reduce using rule 162 (empty-statement -> DELIM .)
    VOID            reduce using rule 162 (empty-statement -> DELIM .)
    BOOL            reduce using rule 162 (empty-statement -> DELIM .)
    INT             reduce using rule 162 (empty-statement -> DELIM .)
    UINT            reduce using rule 162 (empty-statement -> DELIM .)
    CHAR            reduce using rule 162 (empty-statement -> DELIM .)
    DOUBLE          reduce using rule 162 (empty-statement -> DELIM .)
    BLOCK_END       reduce using rule 162 (empty-statement -> DELIM .)
    CASE            reduce using rule 162 (empty-statement -> DELIM .)
    DEFAULT         reduce using rule 162 (empty-statement -> DELIM .)
    $end            reduce using rule 162 (empty-statement -> DELIM .)


state 5

    (163) expression-statement -> statement-expression . DELIM

    DELIM           shift and go to state 75


state 6

    (183) iteration-statement -> for-statement . M_quad
    (173) M_quad -> . empty
    (216) empty -> .

    IDENTIFIER      reduce using rule 216 (empty -> .)
    BLOCK_BEGIN     reduce using rule 216 (empty -> .)
    DELIM           reduce using rule 216 (empty -> .)
    CONSOLE         reduce using rule 216 (empty -> .)
    CONST           reduce using rule 216 (empty -> .)
    IF              reduce using rule 216 (empty -> .)
    SWITCH          reduce using rule 216 (empty -> .)
    WHILE           reduce using rule 216 (empty -> .)
    FOR             reduce using rule 216 (empty -> .)
    DO              reduce using rule 216 (empty -> .)
    BREAK           reduce using rule 216 (empty -> .)
    CONTINUE        reduce using rule 216 (empty -> .)
    GOTO            reduce using rule 216 (empty -> .)
    RETURN          reduce using rule 216 (empty -> .)
    VOID            reduce using rule 216 (empty -> .)
    BOOL            reduce using rule 216 (empty -> .)
    INT             reduce using rule 216 (empty -> .)
    UINT            reduce using rule 216 (empty -> .)
    CHAR            reduce using rule 216 (empty -> .)
    DOUBLE          reduce using rule 216 (empty -> .)
    $end            reduce using rule 216 (empty -> .)
    BLOCK_END       reduce using rule 216 (empty -> .)
    CASE            reduce using rule 216 (empty -> .)
    DEFAULT         reduce using rule 216 (empty -> .)

    M_quad                         shift and go to state 76
    empty                          shift and go to state 77

state 7

    (127) method-header -> VOID . IDENTIFIER OPEN_PAREN formal-parameter-list-opt CLOSE_PAREN

    IDENTIFIER      shift and go to state 78


state 8

    (204) goto-statement -> GOTO . IDENTIFIER DELIM

    IDENTIFIER      shift and go to state 79


state 9

    (142) statement -> labeled-statement .
